Fixed z-index

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -84,6 +84,7 @@ button {
 
 .is-hidden {
     opacity: 0;
+    z-index: 0;
 }
 
 @media only screen and (orientation:portrait) {
